# orin_ws

src/: ReadMe.md
src/ackerman_pkg/: CMakeLists.txt  package.xml
src/ackerman_pkg/config/: dummy.yaml  webots_interface.yaml
src/ackerman_pkg/include/: IWebotsAckDrive.hpp  IWebotsOdom.hpp  iWebotsNode.hpp
src/ackerman_pkg/launch/: control.launch  dummy.launch  newControllerWebotsInterface.launch  newControllerWebotsInterfaceDynamic.launch  pcd_to_scan_webots.launch  robotRViz.launch  robot_tf_publish.launch  webotsInterface.launch
src/ackerman_pkg/map/: empty_warehouse.bt  empty_warehouse.yaml  indoor_no_ground.pgm  indoor_no_ground.yaml  map.pgm  map.yaml  octoWarehouse.bt  warehouse.pgm  warehouse.yaml  warehouse_indoor_map_16_no_road.pgm  warehouse_indoor_map_16_no_road.yaml
src/ackerman_pkg/rviz/: m2d_display.rviz  m2d_display_new_controller.rviz
src/ackerman_pkg/scripts/: RosSerialInterface.cpp
src/ackerman_pkg/src/: main.cpp
src/ackerman_pkg/urdf/: m2_test.urdf  m2d.urdf
src/astar_ackermann_planner/include/: astar_ackermann_planner.h
src/astar_ackermann_planner/src/: astar_ackermann_planner.cpp  costmap.cpp  utils.cpp
src/astar_ackermann_planner/test/: test_astar_ackermann_planner.cpp
src/autonomous_steering/: CMakeLists.txt  package.xml
src/autonomous_steering/camera_cal/: calibration_data.pickle
src/autonomous_steering/launch/: autonomous_steering.launch  camera_stream.launch
src/autonomous_steering/scripts/: binarization_utils.py  calibration_utils.py  depth_estimation_subscriber_lane.py  frame_subscriber.py  globals.py  line_utils.py  main.py  perspective_utils.py
src/can_pkg/: CMakeLists.txt
src/can_pkg/CAN/: CAN  CAN.c  CAN.h  CANBus.c  CANBus.h  PrjTypedef.h  main.c
src/can_pkg/include/: CAN_Interface.hpp  ROS_Node.hpp  definitions.hpp
src/can_pkg/launch/: can_pkg.launch
src/can_pkg/src/: CAN_Interface.cpp  ROS_Node.cpp  main.cpp
src/direct_lidar_odometry/cfg/: dlo_webots.yaml
src/direct_lidar_odometry/launch/: dlo.launch  dlo_webots.launch  robot_tf_publish.launch
src/direct_lidar_odometry/models/: Rim_and_Motor_Assy.stl
src/direct_lidar_odometry/urdf/: m2_test.urdf
src/geometric_control/: CMakeLists.txt  package.xml
src/geometric_control/data/: adnoc.csv  demo.csv  dp_demo.csv  w_adnoc.csv  w_demo.csv  w_dp.csv  w_test.csv  w_test2.csv  w_waypoints.csv  w_waypoints2.csv  wayPointsGenration.ipynb
src/geometric_control/launch/: odom_geometric_control.launch
src/geometric_control/scripts/: control_using_odom.py  controller2d.py  live_plotter.py  ros_serial.py
src/hdl_localization/: CMakeLists.txt
src/hdl_localization/launch/: hdl_localization.launch
src/hybrid_astar_planner/include/: constants.h
src/lane_kepping/: CMakeLists.txt  README.md  package.xml
src/lane_kepping/launch/: main.launch
src/lane_kepping/src/: gabor_filter.py  ipm.py  lane_kepping_node.py
src/lidar_ground_filter/: CMakeLists.txt
src/move_base_ack/: CMakeLists.txt  package.xml
src/move_base_ack/launch/: amcl.launch  carlike_minimum_time.launch  hybrid_navigation.launch  move_base.launch  navigation.launch
src/move_base_ack/map/: empty_warehouse.pgm  warehouse.pgm  warehouse.yaml
src/move_base_ack/param/: AStarParam.yaml  TrajectoryPlannerROS.yaml  base_local_planner_params.yaml  costmap_params.yaml  costmap_params_global.yaml  dwa_local_planner_params.yaml  global_planner.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  tep_local_planner_params.yaml  waypoints.yaml
src/move_base_ack/rviz/: navigation.rviz
src/move_base_ack/scripts/: amcl_pose_publisher.py  goal_checker.py
src/move_base_ack/src/: dynamic_cmd_vel.py  main.cpp  main_omar.cpp  test.cpp
src/ndt_omp/: CMakeLists.txt
src/octomap_mapping/: .gitignore
src/pcl_ground_extractor/: CMakeLists.txt  package.xml
src/point_cloud_clipper/: CMakeLists.txt  package.xml
src/point_cloud_clipper/src/: point_cloud_clipper_node.cpp
(+21 files in other folders)
