<?xml version="1.0"?>
<package format="2">
  <name>move_base_ack</name>
  <version>1.2.6</version>
  <description>
    The move_base_nav provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  

  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
